--- a/NightClubList/Properties/Resources.resx
+++ b/NightClubList/Properties/Resources.resx
@@ -118,7 +118,19 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="USer" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\USer.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Jewel-Guestlist" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Jewel-Guestlist.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Guest_List_Application_Ticketstripe" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Guest_List_Application_Ticketstripe.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="disco bild" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\disco bild.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="0caca359f7f6c1623ec2e963f5a5b706" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\0caca359f7f6c1623ec2e963f5a5b706.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
